--- a/kubernetes/apps/database/kustomization.yaml
+++ b/kubernetes/apps/database/kustomization.yaml
@@ -9,7 +9,7 @@ resources:
   # Flux-Kustomizations
   - ./cloudnative-pg/ks.yaml
   # - ./dragonfly/ks.yaml
-  # - ./pgadmin/ks.yaml
+  - ./pgadmin/ks.yaml
   # - ./postgres-backup/ks.yaml
 transformers:
   - |-
