fix(cilium): move dashboards to grafana folder

--- a/kubernetes/apps/kube-system/cilium/app/helm-values.yaml
+++ b/kubernetes/apps/kube-system/cilium/app/helm-values.yaml
@@ -21,6 +21,8 @@ envoy:
   enabled: false
 dashboards:
   enabled: true
+  annotations:
+    grafana_folder: Cilium
 hubble:
   enabled: false
 ipam:
