--- a/kubernetes/apps/self-hosted/kustomization.yaml
+++ b/kubernetes/apps/self-hosted/kustomization.yaml
@@ -8,7 +8,7 @@ resources:
   - ../../templates/alerts
   # Flux-Kustomizations
   - ./dokuwiki/ks.yaml
-  # - ./hoarder/ks.yaml
+  - ./hoarder/ks.yaml
   # - ./immich/ks.yaml
   # - ./immich-folder-album-creator/ks.yaml
   - ./searxng/ks.yaml
