--- a/kubernetes/apps/database/kustomization.yaml
+++ b/kubernetes/apps/database/kustomization.yaml
@@ -10,7 +10,7 @@ resources:
   - ./cloudnative-pg/ks.yaml
   - ./dragonfly/ks.yaml
   - ./pgadmin/ks.yaml
-  # - ./postgres-backup/ks.yaml
+  - ./postgres-backup/ks.yaml
 transformers:
   - |-
     apiVersion: builtin
