feat: deploy immich-folder-album-creator

--- a/kubernetes/apps/self-hosted/kustomization.yaml
+++ b/kubernetes/apps/self-hosted/kustomization.yaml
@@ -10,7 +10,7 @@ resources:
   - ./dokuwiki/ks.yaml
   - ./hoarder/ks.yaml
   - ./immich/ks.yaml
-  # - ./immich-folder-album-creator/ks.yaml
+  - ./immich-folder-album-creator/ks.yaml
   - ./searxng/ks.yaml
 transformers:
   - |-
