--- a/kubernetes/apps/observability/kustomization.yaml
+++ b/kubernetes/apps/observability/kustomization.yaml
@@ -13,7 +13,7 @@ resources:
   - ./kube-prometheus-stack/ks.yaml
   - ./kubernetes-dashboard/ks.yaml
   - ./loki/ks.yaml
-  # - ./promtail/ks.yaml
+  - ./promtail/ks.yaml
   # - ./silence-operator/ks.yaml
   # - ./unpoller/ks.yaml
 transformers:
