feat: deploy unpoller

--- a/kubernetes/apps/observability/kustomization.yaml
+++ b/kubernetes/apps/observability/kustomization.yaml
@@ -15,7 +15,7 @@ resources:
   - ./loki/ks.yaml
   - ./promtail/ks.yaml
   # - ./silence-operator/ks.yaml
-  # - ./unpoller/ks.yaml
+  - ./unpoller/ks.yaml
 transformers:
   - |-
     apiVersion: builtin
