--- a/kubernetes/apps/media/kustomization.yaml
+++ b/kubernetes/apps/media/kustomization.yaml
@@ -12,7 +12,7 @@ resources:
   # - ./bazarr/ks.yaml
   - ./jellyfin/ks.yaml
   # - ./jellyseerr/ks.yaml
-  # - ./jellystat/ks.yaml
+  - ./jellystat/ks.yaml
   - ./lidarr/ks.yaml
   - ./navidrome/ks.yaml
   - ./prowlarr/ks.yaml
