--- a/kubernetes/apps/system-upgrade/kustomization.yaml
+++ b/kubernetes/apps/system-upgrade/kustomization.yaml
@@ -7,7 +7,7 @@ resources:
   - ./namespace.yaml
   - ../../templates/alerts
   # Flux-Kustomizations
-  # - ./system-upgrade-controller/ks.yaml
+  - ./system-upgrade-controller/ks.yaml
 transformers:
   - |-
     apiVersion: builtin
