feat: remove talos-debug-tools

--- a/kubernetes/apps/kube-system/kustomization.yaml
+++ b/kubernetes/apps/kube-system/kustomization.yaml
@@ -16,7 +16,7 @@ resources:
   - ./nvidia-device-plugin/ks.yaml
   - ./reloader/ks.yaml
   - ./spegel/ks.yaml
-  - ./talos-debug-tools/ks.yaml
+  # - ./talos-debug-tools/ks.yaml
 transformers:
   - |-
     apiVersion: builtin
