--- a/kubernetes/apps/security/external-secrets/ks.yaml
+++ b/kubernetes/apps/security/external-secrets/ks.yaml
@@ -23,7 +23,27 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app external-secrets-stores
+  name: &app onepassword
+  namespace: flux-system
+spec:
+  targetNamespace: security
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *app
+  path: ./kubernetes/apps/security/external-secrets/onepassword
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+  wait: true
+  interval: 30m
+  timeout: 5m
+---
+# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/kustomize.toolkit.fluxcd.io/kustomization_v1.json
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: &app onepassword-store
   namespace: flux-system
 spec:
   targetNamespace: security
@@ -32,6 +52,7 @@ spec:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: external-secrets
+    - name: onepassword
   path: ./kubernetes/apps/security/external-secrets/stores
   prune: true
   sourceRef:
