--- a/kubernetes/apps/security/external-secrets/onepassword/helmrelease.yaml
+++ b/kubernetes/apps/security/external-secrets/onepassword/helmrelease.yaml
@@ -3,7 +3,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: &app onepassword-connect
+  name: &app onepassword
 spec:
   interval: 30m
   chart:
@@ -22,9 +22,11 @@ spec:
     remediation:
       strategy: rollback
       retries: 3
+  dependsOn:
+    - name: external-secrets
   values:
     controllers:
-      onepassword-connect:
+      onepassword:
         strategy: RollingUpdate
         annotations:
           reloader.stakater.com/auto: "true"
