fix(external-secrets): refactor onepassword

--- a/kubernetes/apps/download/qbittorrent/app/externalsecret.yaml
+++ b/kubernetes/apps/download/qbittorrent/app/externalsecret.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
-    name: onepassword-connect
+    name: onepassword
   data:
     - secretKey: WIREGUARD_ENDPOINT_IP
       remoteRef:
