--- a/kubernetes/apps/database/dragonfly/app/externalsecret.yaml
+++ b/kubernetes/apps/database/dragonfly/app/externalsecret.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
-    name: onepassword-connect
+    name: onepassword
   data:
     - secretKey: password
       remoteRef:
