--- a/kubernetes/apps/database/dragonfly/ks.yaml
+++ b/kubernetes/apps/database/dragonfly/ks.yaml
@@ -32,7 +32,7 @@ spec:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: dragonfly
-    - name: external-secrets-stores
+    - name: onepassword-store
   path: ./kubernetes/apps/database/dragonfly/cluster
   prune: true
   sourceRef:
