--- a/kubernetes/apps/database/pgadmin/ks.yaml
+++ b/kubernetes/apps/database/pgadmin/ks.yaml
@@ -12,7 +12,7 @@ spec:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: cloudnative-pg-cluster
-    - name: external-secrets-stores
+    - name: onepassword-store
     - name: volsync
   path: ./kubernetes/apps/database/pgadmin/app
   prune: true
