--- a/kubernetes/apps/security/authelia/ks.yaml
+++ b/kubernetes/apps/security/authelia/ks.yaml
@@ -13,7 +13,7 @@ spec:
   dependsOn:
     - name: cloudnative-pg-cluster
     - name: dragonfly-cluster
-    - name: external-secrets-stores
+    - name: onepassword-store
   path: ./kubernetes/apps/security/authelia/app
   prune: true
   sourceRef:
