--- a/kubernetes/apps/security/cert-manager/ks.yaml
+++ b/kubernetes/apps/security/cert-manager/ks.yaml
@@ -32,7 +32,7 @@ spec:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: cert-manager
-    - name: external-secrets-stores
+    - name: onepassword-store
   path: ./kubernetes/apps/security/cert-manager/issuers
   prune: true
   sourceRef:
