--- a/kubernetes/apps/storage/democratic-csi/ks.yaml
+++ b/kubernetes/apps/storage/democratic-csi/ks.yaml
@@ -11,7 +11,7 @@ spec:
     labels:
       app.kubernetes.io/name: *app
   dependsOn:
-    - name: external-secrets-stores
+    - name: onepassword-store
     - name: snapshot-controller
   path: ./kubernetes/apps/storage/democratic-csi/iscsi
   prune: true
@@ -34,7 +34,7 @@ spec:
     labels:
       app.kubernetes.io/name: *app
   dependsOn:
-    - name: external-secrets-stores
+    - name: onepassword-store
     - name: snapshot-controller
   path: ./kubernetes/apps/storage/democratic-csi/nfs
   prune: true
