--- a/kubernetes/flux/meta/repositories/helm/external-secrets.yaml
+++ b/kubernetes/flux/meta/repositories/helm/external-secrets.yaml
@@ -6,5 +6,6 @@ metadata:
   name: external-secrets
   namespace: flux-system
 spec:
-  interval: 1h
+  type: oci
+  interval: 30m
   url: oci://ghcr.io/external-secrets/charts
