--- a/kubernetes/apps/database/kustomization.yaml
+++ b/kubernetes/apps/database/kustomization.yaml
@@ -8,7 +8,7 @@ resources:
   - ../../templates/alerts
   # Flux-Kustomizations
   - ./cloudnative-pg/ks.yaml
-  # - ./dragonfly/ks.yaml
+  - ./dragonfly/ks.yaml
   - ./pgadmin/ks.yaml
   - ./postgres-backup/ks.yaml
 transformers:
