--- a/kubernetes/apps/network/ingress-nginx/external/helmrelease.yaml
+++ b/kubernetes/apps/network/ingress-nginx/external/helmrelease.yaml
@@ -83,7 +83,7 @@ spec:
           namespaceSelector:
             any: true
       extraArgs:
-        default-ssl-certificate: "network/${SECRET_DOMAIN/./-}-production-tls"
+        default-ssl-certificate: "security/${SECRET_DOMAIN/./-}-production-tls"
       terminationGracePeriodSeconds: 120
       topologySpreadConstraints:
         - maxSkew: 1
