--- a/kubernetes/flux/cluster/ks.yaml
+++ b/kubernetes/flux/cluster/ks.yaml
@@ -6,20 +6,21 @@ metadata:
   name: cluster-meta
   namespace: flux-system
 spec:
-  # Flux repositories under this need flux-system hardcoded as namespace for Renovate lookups.
-  targetNamespace: flux-system
+  decryption:
+    provider: sops
+    secretRef:
+      name: sops-age
+  interval: 30m
   path: ./kubernetes/flux/meta
   prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
     namespace: flux-system
+  # Flux repositories under this need flux-system hardcoded as namespace for Renovate lookups.
+  targetNamespace: flux-system
+  timeout: 5m
   wait: true
-  interval: 30m
-  decryption:
-    provider: sops
-    secretRef:
-      name: sops-age
 ---
 # yaml-language-server: $schema=https://raw.githubusercontent.com/fluxcd-community/flux2-schemas/main/kustomization-kustomize-v1.json
 apiVersion: kustomize.toolkit.fluxcd.io/v1
@@ -28,30 +29,17 @@ metadata:
   name: cluster-apps
   namespace: flux-system
 spec:
-  dependsOn:
-    - name: cluster-meta
-  path: ./kubernetes/apps
-  prune: true
-  sourceRef:
-    kind: GitRepository
-    name: flux-system
-    namespace: flux-system
-  wait: false
-  interval: 30m
   decryption:
     provider: sops
     secretRef:
       name: sops-age
-  postBuild:
-    substituteFrom:
-      - name: cluster-settings
-        kind: ConfigMap
-        optional: true
-      - name: cluster-secrets
-        kind: Secret
-        optional: true
+  dependsOn:
+    - name: cluster-meta
+  interval: 30m
+  path: ./kubernetes/apps
   patches:
-    - patch: |-
+    - # Add SOPS decryption and postBuild substitutions to child Kustomizations.
+      patch: |-
         apiVersion: kustomize.toolkit.fluxcd.io/v1
         kind: Kustomization
         metadata:
@@ -73,3 +61,18 @@ spec:
         group: kustomize.toolkit.fluxcd.io
         kind: Kustomization
         labelSelector: substitution.flux.home.arpa/disabled notin (true)
+  postBuild:
+    substituteFrom:
+      - name: cluster-settings
+        kind: ConfigMap
+        optional: true
+      - name: cluster-secrets
+        kind: Secret
+        optional: true
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+    namespace: flux-system
+  timeout: 5m
+  wait: false
