--- a/kubernetes/apps/kube-system/nvidia-device-plugin/ks.yaml
+++ b/kubernetes/apps/kube-system/nvidia-device-plugin/ks.yaml
@@ -13,7 +13,7 @@ spec:
     - name: node-feature-discovery
   interval: 30m
   path: ./kubernetes/apps/kube-system/nvidia-device-plugin/app
-  prune: true
+  prune: false # revert after merge
   sourceRef:
     kind: GitRepository
     name: flux-system
