--- a/kubernetes/apps/network/ingress-nginx/ks.yaml
+++ b/kubernetes/apps/network/ingress-nginx/ks.yaml
@@ -13,7 +13,7 @@ spec:
     - name: onepassword-store
   interval: 30m
   path: ./kubernetes/apps/network/ingress-nginx/external
-  prune: true
+  prune: false # revert after merge
   sourceRef:
     kind: GitRepository
     name: flux-system
@@ -37,7 +37,7 @@ spec:
     - name: onepassword-store
   interval: 30m
   path: ./kubernetes/apps/network/ingress-nginx/internal
-  prune: true
+  prune: false # revert after merge
   sourceRef:
     kind: GitRepository
     name: flux-system
