--- a/kubernetes/apps/observability/exporters/sonarr-exporter/ks.yaml
+++ b/kubernetes/apps/observability/exporters/sonarr-exporter/ks.yaml
@@ -14,7 +14,7 @@ spec:
     - name: onepassword-store
   interval: 30m
   path: ./kubernetes/apps/observability/exporters/sonarr-exporter/app
-  prune: true
+  prune: false # revert after merge
   sourceRef:
     kind: GitRepository
     name: flux-system
