--- a/kubernetes/apps/observability/unpoller/ks.yaml
+++ b/kubernetes/apps/observability/unpoller/ks.yaml
@@ -13,7 +13,7 @@ spec:
     - name: onepassword-store
   interval: 30m
   path: ./kubernetes/apps/observability/unpoller/app
-  prune: true
+  prune: false # revert after merge
   sourceRef:
     kind: GitRepository
     name: flux-system
