--- a/kubernetes/apps/self-hosted/hoarder/ks.yaml
+++ b/kubernetes/apps/self-hosted/hoarder/ks.yaml
@@ -30,7 +30,7 @@ spec:
       VOLSYNC_CAPACITY: &capacity 2Gi
       VOLSYNC_CACHE_CAPACITY: *capacity
       VOLSYNC_TIME: "30 3 * * *"
-  prune: true
+  prune: false # revert after merge
   sourceRef:
     kind: GitRepository
     name: flux-system
