--- a/kubernetes/apps/self-hosted/immich/ks.yaml
+++ b/kubernetes/apps/self-hosted/immich/ks.yaml
@@ -23,7 +23,7 @@ spec:
       PVC_ACCESSMODES: ReadWriteOnce
       PVC_STORAGECLASS: ${CLUSTER_STORAGE_BLOCK}
       PVC_CAPACITY: 10Gi
-  prune: true
+  prune: false # revert after merge
   sourceRef:
     kind: GitRepository
     name: flux-system
