feat: move flux ks out of flux-system

--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -8,4 +8,4 @@ resources:
   - ./namespace.yaml
   # Flux-Kustomizations
 components:
-  - ../../components/alerts
+  - ../../flux/components/alerts
