--- a/kubernetes/apps/media/kustomization.yaml
+++ b/kubernetes/apps/media/kustomization.yaml
@@ -21,4 +21,4 @@ resources:
   - ./sonarr/ks.yaml
   - ./unpackerr/ks.yaml
 components:
-  - ../../components/alerts
+  - ../../flux/components/alerts
