--- a/kubernetes/apps/ai/kustomization.yaml
+++ b/kubernetes/apps/ai/kustomization.yaml
@@ -10,4 +10,4 @@ resources:
   # - ./ollama/ks.yaml
   # - ./open-webui/ks.yaml
 components:
-  - ../../components/alerts
+  - ../../flux/components/alerts
