--- a/kubernetes/apps/database/kustomization.yaml
+++ b/kubernetes/apps/database/kustomization.yaml
@@ -12,4 +12,4 @@ resources:
   - ./pgadmin/ks.yaml
   - ./postgres-backup/ks.yaml
 components:
-  - ../../components/alerts
+  - ../../flux/components/alerts
