--- a/kubernetes/apps/download/qbittorrent/ks.yaml
+++ b/kubernetes/apps/download/qbittorrent/ks.yaml
@@ -10,7 +10,7 @@ spec:
     labels:
       app.kubernetes.io/name: *app
   components:
-    - ../../../../components/volsync
+    - ../../../../flux/components/volsync
   dependsOn:
     - name: onepassword-store
     - name: volsync
