--- a/kubernetes/apps/utilities/kustomization.yaml
+++ b/kubernetes/apps/utilities/kustomization.yaml
@@ -12,4 +12,4 @@ resources:
   - ./it-tools/ks.yaml
   - ./jsoncrack/ks.yaml
 components:
-  - ../../components/alerts
+  - ../../flux/components/alerts
