--- a/kubernetes/flux/meta/settings/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/meta/settings/cluster-secrets.sops.yaml
@@ -4,16 +4,16 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:h90PqoCL7WJ/s2Id,iv:AjAuNzI0OjGAzptKPxsHx/NsL5dqxJROuy7OML3s6/Y=,tag:/o0b5brPWYqbs9OGbq6/Mg==,type:str]
-    SECRET_EMAIL: ENC[AES256_GCM,data:51YhoMHQGb9QTwEn+Q==,iv:JYFO40I214ntfBQQoAPBCkKnlZ6m48jXj/uBn4k9ybU=,tag:sfVOm1i2vBXvS2+jtip2MA==,type:str]
-    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:SYgvxay0eAh4R5x7LURoIouCNlqvY+SaZkHXxJ0GtzCYJsKh,iv:p6NbXyfz3H7JAvLr8DrRMrE4Jrp9WmtkVYpBesLfyak=,tag:Oas+mpb2fmbvUzfnaZuL+Q==,type:str]
-    SECRET_NAS_IP: ENC[AES256_GCM,data:5hu1SRno9oYQ7g==,iv:U/o8IGTmUEcZvPU0W+VKx8ISQm/ElpE+zcvAKuAsPXQ=,tag:2hlWTuTrK6N3rP8X7gFumw==,type:str]
-    SECRET_NFS_PATH_IMMICH: ENC[AES256_GCM,data:PK2Xq5R+mNouU84bB8vDyPZ42z4=,iv:EsTWNo2S/7wRkpw9f1kqVg/M4HexTOFl9XbIC/AcaQI=,tag:QWW8nR3IRvlM+2VM7R7WhA==,type:str]
-    SECRET_NFS_PATH_MEDIA: ENC[AES256_GCM,data:RtlmKcbhffUvBDpkxu0Q13PUJ94=,iv:ozczEJTy0B1Xn5jewCHOdybi3OEhWYavHV1//LPyjDQ=,tag:Pnqnlamy8RzgllLfjRWU3Q==,type:str]
-    SECRET_NFS_PATH_MINIO: ENC[AES256_GCM,data:N2AS7HlOhR8+KJxwBEOAnSyZ6A==,iv:p7yBQX3e/1h/OVeaosW1JBqQNaNzF4EsoTIMggQF0G0=,tag:imvtLxp/lk/4IZ5BqrBIvQ==,type:str]
-    SECRET_NFS_PATH_MUSIC: ENC[AES256_GCM,data:NhblvU+0rTn8835QRjxlM8OZGtz5ZjMZIMuaAZOFuaL3vw==,iv:eymVI8nZiSz36hYplWIFcwKNCK7OAGsbUUgddtvf6UI=,tag:+AQAqopMppgTwFQE09UAmA==,type:str]
-    SECRET_NFS_PATH_PGBACKUPS: ENC[AES256_GCM,data:brZMGI/sLgpzXDLGRHvzEvieCC2Dcz3XfT6m/Kw7XIs=,iv:0ftq7Uc9QT+/hUHAJNdNp9ATAgb5orX2gt1i/PTCCAc=,tag:BD8wsaIJ/Ra+GGAJOK4poA==,type:str]
-    SECRET_NFS_PATH_PHOTOS: ENC[AES256_GCM,data:Ux/BPHEiYzPZ56gD+h96ADWjlkw=,iv:1We8rlAKg8abVql3EIksgEgexclm0ax0xTq5aXJOdis=,tag:ElrdEI2YKgMZGZpjt9HEog==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:5O6SpYFeykH7Id8T,iv:FjRRIhCkDuEn02A3BlBNZThmSc3gYWP2IxRI3r9G1X4=,tag:X95nRY8dPeEs8qeFFDu0rw==,type:str]
+    SECRET_EMAIL: ENC[AES256_GCM,data:XAG2Nt+jTW9iwy4QjQ==,iv:0k8flXUjMVlyYL1CZi+yR6mQ497txf9WQsO8yNl35V8=,tag:KIrB/S1MStYXQKP46QQxHg==,type:str]
+    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:7M9b0t9dClQULdQibryUEojkuDpkq41vdMy5At9u6pA3cUkY,iv:4crP4lOzLMwt1AVPzTWu//k+aTXp/70/civgfuDs+50=,tag:Gqsm8oClbTQhu8OPTdKV1g==,type:str]
+    SECRET_NAS_IP: ENC[AES256_GCM,data:TxBpQHYKLN8z+g==,iv:tmTQsdF4Y9C8hdCCBB4FRpK74wWR/RX7Hwrg9T2FMzg=,tag:AjAvgtMrcCMs8uBbFB7V7Q==,type:str]
+    SECRET_NFS_PATH_IMMICH: ENC[AES256_GCM,data:B2rCyKsje9e9gKfz+GBdqMtdLvs=,iv:ZRPxELv5JJItfy9grDg00HNAzEZIi5BJD+OGYGAtxCg=,tag:Y6y74cskGL7O4ZO/LTNmNg==,type:str]
+    SECRET_NFS_PATH_MEDIA: ENC[AES256_GCM,data:HqafAfc3ChMPZhpkEP4Gv3O60k4=,iv:lJmoihGD/PhqsUoxbp7sTMODFVw1LtKwH1PUXJqCjj8=,tag:VlN81UMe68wYSO2DPMRyHw==,type:str]
+    SECRET_NFS_PATH_MINIO: ENC[AES256_GCM,data:799ObfDXpkBeiCDqiuHBiRS3PA==,iv:WvWgjwWT+knmvqE++oCezeMRyfp5SfonTuEjsfc/nWg=,tag:MJO0wJ/cRban7il+StL+Vg==,type:str]
+    SECRET_NFS_PATH_MUSIC: ENC[AES256_GCM,data:ctw/4HF/XrzLVJYdWnsWCvOrf1I7kCswlzIu5QbLC/GRcg==,iv:dnwWBDEW2zpntbADZehlf5vKvJbtl9miJML3exZmQpA=,tag:lFN9FA7sCq3kqzu/4m3g0w==,type:str]
+    SECRET_NFS_PATH_PGBACKUPS: ENC[AES256_GCM,data:W9jgbwaYS3kUBQPnHmAb+5MrlsE/co2hjOa5v+vNv8M=,iv:GyX7rkSg3QcrDf1tGXM9Kk8j6woSMEc9s/wZfO6cCz0=,tag:NoRNXZbkrjZ3GOGxJ4OMCA==,type:str]
+    SECRET_NFS_PATH_PHOTOS: ENC[AES256_GCM,data:ry/lM9/KgyqQJx9YL9W114eIMmQ=,iv:NmgyDPqIOCfy0cN+yVXUNjJpuRvN4ex6L4J+q5+JsVA=,tag:Ma2S8a58zalz7xfcibKQWw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -23,14 +23,14 @@ sops:
         - recipient: age16jrnvsqz55me3ju4kl96y2tjs90gygyvk5ren7ch8mv2rxtrqvus508fpn
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBsdlFDT0h4YVJaUHdkVkNn
-            V1NIY0xJQTF1SmYyNE9KTFZqbXhpTkFlOUQwCkk0K1R3T2I5eiswSnFDbWk2Tisy
-            eHB1ZFZxR1F4MnNvRGRvRFI3SVV2WDAKLS0tIGpFa2cya1ZQd0hBdFdYaDlUcmdh
-            WHBGVEJLRWJjYk03ZGdmQnJlaytpdFUK/oMSjv3FD4KQcu4zYzZ/kl/QHZYsMvae
-            Ray/ENF9bfoMVDKZychedsV+7XDuG8lZUIIA8MgHvgjlue+IDhgd0w==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB3dm10OWhjbGhwQ3ltV1Mx
+            VitRcUk1LzhwL0Z3SWxHbnhobXplaUhjZWc4ClU3MHc5VXRldU1EejJVYVdkVE40
+            L2h0NzBMaTAwNzJCMS9ndkR6azFZM0UKLS0tIGZzZUpWcHJQMzQxVzVEcnJ3Sklj
+            bXByQVBLdFRkSFhBQzNrZ1RLNnhOMlkKNidtWmQcxOip1fd73Y2WAqYOc/VSFDfz
+            k7nqcChGK6i0mp+kq4DkdsdUTssEcYRHx7oQlYsybNie8E3U6n2eSw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-14T16:41:54Z"
-    mac: ENC[AES256_GCM,data:rGvx+CHSU9uf+OHus/4Rq9EwhR16P52iGUHQ/IEqbDuPCNpLXkJNFxeQF8gUdRMtyhsSwDc4s8zscIj3mmARYiJQLGKlKOo3BEFFl0+sKJGuM4q/MSvskobqY8ogW+h/TZkxLfc15M6hmJ1BZdItMWAKbfIxI0uLBTnubOjzxoU=,iv:7aAtGBjiiempbrrGEzdwHrZAs4cXBloQM7TTQ4pGEqg=,tag:w+vkJ3YbfKRauWBAetaB8A==,type:str]
+    lastmodified: "2025-01-23T09:50:20Z"
+    mac: ENC[AES256_GCM,data:okQQg63rUl71JGJG6NnX04+dKIJe/Rc2pBw+aJMXbqxHP6V7D2TaO2kRQ+rXyo0YGJorjYPjGvSUPKB8K6dhH3mJiXHdEh+R2sltu+rSQAjQTjJ7Jq+GpwBLpXsi44qE60mZ8ARX+FN2P00Y/Lr89rbo+aicIs0dSqBKCwme7GE=,iv:+CA1DNvJfbN3qpWxv8HvX+iJlR8+eO036WP0x6+OWHk=,tag:A9agp49qfrcgFCzyKj7ojA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     mac_only_encrypted: true
