--- a/kubernetes/flux/cluster/ks.yaml
+++ b/kubernetes/flux/cluster/ks.yaml
@@ -8,13 +8,13 @@ metadata:
 spec:
   # Flux repositories under this need flux-system hardcoded as namespace for Renovate lookups.
   targetNamespace: flux-system
+  interval: 30m
   path: ./kubernetes/flux/meta
   prune: true
+  wait: true
   sourceRef:
     kind: GitRepository
     name: flux-system
-  wait: true
-  interval: 30m
   decryption:
     provider: sops
     secretRef:
@@ -27,6 +27,7 @@ metadata:
   name: cluster-apps
   namespace: flux-system
 spec:
+  interval: 30m
   dependsOn:
     - name: cluster-meta
   path: ./kubernetes/apps
@@ -34,8 +35,6 @@ spec:
   sourceRef:
     kind: GitRepository
     name: flux-system
-  wait: false
-  interval: 30m
   decryption:
     provider: sops
     secretRef:
@@ -49,7 +48,8 @@ spec:
         kind: Secret
         optional: true
   patches:
-    - patch: |-
+    - # Add SOPS decryption and postBuild substitutions to child Kustomizations.
+      patch: |-
         apiVersion: kustomize.toolkit.fluxcd.io/v1
         kind: Kustomization
         metadata:
