--- a/kubernetes/apps/observability/kustomization.yaml
+++ b/kubernetes/apps/observability/kustomization.yaml
@@ -3,8 +3,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  # Pre Flux-Kustomizations
-  - ../../templates/alerts
   # Flux-Kustomizations
   - ./exporters
   - ./gatus/ks.yaml
@@ -16,12 +14,13 @@ resources:
   - ./silence-operator/ks.yaml
   - ./unpoller/ks.yaml
 components:
+  - ../../flux/components/alerts
   - ../../flux/components/namespace
 patches:
   - # Add the name to the namespace.
     patch: |
       - op: add
         path: /metadata/name
-        value: cert-manager
+        value: observability
     target:
       kind: Namespace
