--- a/kubernetes/apps/download/kustomization.yaml
+++ b/kubernetes/apps/download/kustomization.yaml
@@ -3,19 +3,18 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  # Pre Flux-Kustomizations
-  - ../../templates/alerts
   # Flux-Kustomizations
   - ./flaresolverr/ks.yaml
   - ./pinchflat/ks.yaml
   - ./qbittorrent/ks.yaml
 components:
+  - ../../flux/components/alerts
   - ../../flux/components/namespace
 patches:
   - # Add the name to the namespace.
     patch: |
       - op: add
         path: /metadata/name
-        value: cert-manager
+        value: download
     target:
       kind: Namespace
