feat: move templates to flux components

--- a/kubernetes/apps/ai/open-webui/ks.yaml
+++ b/kubernetes/apps/ai/open-webui/ks.yaml
@@ -10,6 +10,8 @@ spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
+  components:
+    - ../../../flux/components/pvc
   dependsOn:
     - name: ollama
   path: ./kubernetes/apps/ai/open-webui/app
