--- a/kubernetes/apps/self-hosted/immich/ks.yaml
+++ b/kubernetes/apps/self-hosted/immich/ks.yaml
@@ -10,6 +10,8 @@ spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
+  components:
+    - ../../../flux/components/pvc
   dependsOn:
     - name: cloudnative-pg-cluster
     - name: dragonfly-cluster
