--- a/kubernetes/apps/network/kustomization.yaml
+++ b/kubernetes/apps/network/kustomization.yaml
@@ -9,7 +9,7 @@ resources:
   - ./external-dns/ks.yaml
   - ./ingress-nginx/ks.yaml
 components:
-  - ../../flux/components/alerts
+  # - ../../flux/components/alerts
   - ../../flux/components/namespace
 patches:
   - # Add the name to the namespace.
