fix: re-deploy pinchflat

--- a/kubernetes/apps/download/kustomization.yaml
+++ b/kubernetes/apps/download/kustomization.yaml
@@ -5,7 +5,7 @@ kind: Kustomization
 resources:
   # Flux-Kustomizations
   - ./flaresolverr/ks.yaml
-  # - ./pinchflat/ks.yaml
+  - ./pinchflat/ks.yaml
   - ./qbittorrent/ks.yaml
 components:
   # - ../../flux/components/alerts
