--- a/kubernetes/apps/self-hosted/kustomization.yaml
+++ b/kubernetes/apps/self-hosted/kustomization.yaml
@@ -2,7 +2,6 @@
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: self-hosted
 resources: []
   # Flux-Kustomizations
   # - ./dokuwiki/ks.yaml
@@ -11,7 +10,7 @@ resources: []
   # - ./immich-folder-album-creator/ks.yaml
   # - ./searxng/ks.yaml
 components:
-  - ../../flux/components/alerts
+  # - ../../flux/components/alerts
   - ../../flux/components/namespace
 patches:
   - # Add the name to the namespace.
